
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2021 FEB 21c
  * in model/chem/_CO2_Plasma_23s_Park/chem.c
    - fixed a bug: reaction 13 used N instead of X as a parameter
    

2021 FEB 21b
  * in src/common.h
    - in gl_t, added boolean variable OUTPUTBINARYMPI
  * in src/data.c
    - added header unistd.h
    - added functions _ai_mpidatafile(),read_data_file_mpi(),write_data_file_mpi() to implement 
      parallel I/O file format WARPMPBFORMAT010
    - modified functions write_data_file(),read_data_file() to implement parallel I/O file format 
      WARPMPBFORMAT010
  * in src/data.h
    - in input_t, added boolean variables BINARYMPI,M1,MM1,M2,MM2,M3,MM3
  * in src/main.c
    - renamed -im1,-im2,-im3 flags to -i1,-i2,-i3
    - added code to implement parallel I/O fileformat to be used via -im and -om flags
    - repurposed -im1,-im2,-im3 flags to read time level minus 1, time level minus 2 and time 
      level minus 3 data of type BINARYMPI
    

2021 FEB 21a
  * in model/fluid/_*_plasma/fluid.c
    - in _kappa() and find_prim_fluid_mem(), now calls _kappah() to include only the heavy species
    - added _kappai()
    - in find_Kstar_interface(), added kappai to kappa for Kstar[fluxet][fluxet]
  * in model/fluid/_*_plasma/fluid_plasma.c
    - in find_Dstar(), took away the charged species thermal diffusion from the velocity
      (now added to find_Kstar_interface)
  * in model/fluid/_Favre-Reynolds_plasma/fluid_post.c
    - added kappae and kappav to the post variables
  * in model/fluid/_Navier-Stokes_plasma/fluid_post.c
    - added kappai to the post variables
  * in model/fluid/doc/Transport_Equations/report.tex
    - in the charged species energy transport equation section, made changes and took away thermal